# netdox

./: .gitignore  .gitlab-ci.yml  Cargo.toml  Dockerfile  Makefile  README.md  func  functions.lua  log  redis.md  spec.md  tarpaulin.toml  test-env-vars.fish  testfn
docs/: arch.md  data.md  functions.md  quickstart.md  testing.md
netdox/: Cargo.toml  README.md
netdox/src/: config.rs  error.rs  main.rs  plugins.rs  process.rs  remote.rs
redis-test/: Cargo.toml
redis-test/src/: main.rs
src/: config.rs  data.rs  error.rs  integration_tests.rs  lua_tests.rs  main.rs  plugins.rs  process.rs  query.rs  remote.rs  tests_common.rs  update.rs
src/config/: local.rs  mod.rs  remote.rs
src/data/: mod.rs  model.rs  store.rs  tests.rs
src/data/store/: redis.rs  redis_store.rs
src/lua_tests/: changelog.rs
src/process/: mod.rs  model.rs  tests.rs
src/remote/: mod.rs  pageseeder.rs
src/remote/pageseeder/: config.rs  mod.rs  psml.rs  publish.rs  remote.rs  tests.rs
src/remote/pageseeder/psml/: changelog.rs  config.rs  links.rs  tests.rs
test/: config-template.toml  config.psml  plugin-1.sh  setup-ps.sh  test.toml
