[package]
name = "netdox"
version = "0.1.0"
edition = "2021"

[dependencies]
age = "0.9.2"
clap = { version = "4.3.4", features = ["derive"] }
paris = { version = "1.5.15", features = ["no_logger", "macros"] }
redis = { version = "0.23.3", features = ["aio", "tokio-comp"] }
serde = { version = "1.0.164", features = ["derive"] }
toml = "0.8.1"
pageseeder = { path = "../pageseeder-rs", optional = true }
async-trait = "0.1.73"
tokio = { version = "1.32.0", features = ["full"] }
reqwest = { version = "0.11.20", optional = true }
zip = { version = "0.6.6", optional = true }
quick-xml = { version = "0.30.0", features = ["serialize"], optional = true }

[features]
default = ["pageseeder"]
pageseeder = ["dep:pageseeder", "dep:zip", "dep:reqwest", "dep:quick-xml"]
