[package]
name = "netdox"
version = "0.1.0"
edition = "2021"

[dependencies]
# Core
clap = { version = "4.3.4", features = ["derive"] }
tokio = { version = "1.32.0", features = ["full"] }
paris = { version = "1.5.15", features = ["no_logger", "macros"] }
serde = { version = "1.0.164", features = ["derive"] }
redis = { version = "0.23.3", features = ["aio", "tokio-comp"] }
age = "0.9.2"
toml = "0.8.1"
async-trait = "0.1.73"

# Optional
pageseeder = { path = "../pageseeder-rs", optional = true }
reqwest = { version = "0.11.20", optional = true }
zip = { version = "0.6.6", optional = true }
quick-xml = { version = "0.31.0", features = ["serialize"], optional = true }
regex = { version = "1.10.2", optional = true }
futures = { version = "0.3.29", optional = true }
lazy_static = { version = "1.4.0", optional = true }

[features]
default = ["pageseeder"]
pageseeder = ["dep:pageseeder", "dep:zip", "dep:reqwest", "dep:quick-xml", "dep:regex", "dep:futures", "dep:lazy_static"]
