[package]
name = "netdox"
version = "0.1.0"
edition = "2021"

[dependencies]
# Core
clap = { version = "4.3.4", features = ["derive"] }
tokio = { version = "1.32.0", features = ["full"] }
paris = { version = "1.5.15", features = ["macros"] }
serde = { version = "1.0.164", features = ["derive"] }
redis = { version = "0.23.3", features = ["aio", "tokio-comp", "streams"] }
age = "0.9.2"
toml = "0.8.1"
async-trait = "0.1.73"
indexmap = "2.2.1"
itertools = "0.12.1"

# Optional
psml = { path = "../pageseeder-rs/psml", optional = true }
pageseeder-api = { path = "../pageseeder-rs/pageseeder-api", optional = true }
reqwest = { version = "0.11.20", optional = true }
zip = { version = "0.6.6", optional = true }
quick-xml = { version = "0.31.0", features = ["serialize"], optional = true }
regex = { version = "1.10.2", optional = true }
futures = { version = "0.3.29", optional = true }
lazy_static = { version = "1.4.0", optional = true }
ipnet = "2.9.0"

[features]
default = ["pageseeder"]
pageseeder = ["dep:pageseeder-api", "dep:psml", "dep:zip", "dep:reqwest", "dep:quick-xml", "dep:regex", "dep:futures", "dep:lazy_static"]
